--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
           ></object>
 
           <div class="min-w-0">
-            <div class="font-extrabold truncate text-lg sm:text-xl">Himaayah Institute</div>
+            <div class="font-extrabold truncate text-lg sm:text-xl">HIAIS</div>
             <div class="hidden sm:block text-xs text-white/70">Arabic. Qur’an. Islamic Sciences.</div>
           </div>
         </a>
@@ -68,6 +68,7 @@
           <a href="payment-portal.html" class="hover:text-[var(--pastel)] transition">Register</a>
           <a href="blogpost.html" class="hover:text-[var(--pastel)] transition">Blog</a>
           <a href="contact.html" class="text-[var(--pastel)] underline underline-offset-4 font-semibold">Contact</a>
+          <a href="faq.html" class="hover:text-[var(--pastel)] transition">FAQ</a>
         </nav>
 
         <button
