--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Himaayah Institute of Arabic and Islamic Studies</title>
+  <title>HIAIS</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -104,6 +104,7 @@
           <a href="payment-portal.html" class="hover:text-[var(--pastel)] transition">Register</a>
           <a href="blogpost.html" class="hover:text-[var(--pastel)] transition">Blog</a>
           <a href="contact.html" class="hover:text-[var(--pastel)] transition">Contact</a>
+          <a href="faq.html" class="hover:text-[var(--pastel)] transition">FAQ</a>
         </nav>
 
         <!-- Mobile menu button -->
