--- a/payment-portal.html
+++ b/payment-portal.html
@@ -52,7 +52,7 @@
             aria-label="Himaayah Icon"
           ></object>
           <div class="min-w-0">
-            <div class="font-extrabold truncate text-lg sm:text-xl">Himaayah Institute of Arabic and Islamic Studies</div>
+            <div class="font-extrabold truncate text-lg sm:text-xl">HIAIS</div>
           </div>
         </a>
 
