--- a/blogpost.html
+++ b/blogpost.html
@@ -92,7 +92,7 @@
           ></object>
 
           <div class="min-w-0">
-            <div class="font-extrabold truncate text-lg sm:text-xl">Himaayah Institute</div>
+            <div class="font-extrabold truncate text-lg sm:text-xl">HIAIS BLOG</div>
             <div class="hidden sm:block text-xs text-white/70">Arabic. Qur’an. Islamic Sciences.</div>
           </div>
         </a>
@@ -105,6 +105,7 @@
           <a href="payment-portal.html" class="navlink">Register</a>
           <a href="blogpost.html" class="text-[var(--pastel)] underline underline-offset-4 font-semibold">Blog</a>
           <a href="contact.html" class="navlink">Contact</a>
+          <a href="faq.html" class="navlink">FAQ</a>
         </nav>
 
         <!-- Mobile menu button -->
