--- a/curriculum.html
+++ b/curriculum.html
@@ -115,7 +115,7 @@
         </p>
 
         <h1 class="mt-3 text-3xl sm:text-4xl md:text-5xl font-extrabold text-[var(--regal)] leading-tight">
-          Authentic learning. Clear structure. Quiet excellence.
+          What We Stand For
         </h1>
 
         <div class="mx-auto mt-5 h-1 w-14 rounded-full bg-[var(--pastel)]"></div>
